feat: agregar métodos CRUD al servicio de Pack.